--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=task-manager-max
 spring.application.version=0.0.1-SNAPSHOT
 
 #database props
-spring.datasource.url=jdbc:mysql://localhost:3306/task_manager_bd
-spring.datasource.username={{personalusername}}
-spring.datasource.password={{personalpassword}}
+spring.datasource.url=jdbc:mysql://taskmanagermaxdb.mysql.database.azure.com:3306/task_manager_bd?useSSL=true
+spring.datasource.username=taskmanagermax
+spring.datasource.password=dbadmin@123
 
 #hibernate props
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
