--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.show-sql=true
 #JWT props 
 app.jwt-secret=JWTSecretKey
 app.jwt-expiration-milliseconds=604800000
+
+#port 
+server.port=8090
